--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,13 @@
                             <outlet property="delegate" destination="11b-Du-Ldj" id="pnn-2u-xKk"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="5QO-pM-2ra"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="5QO-pM-2ra">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="fGk-gU-NTK">
+                            <connections>
+                                <action selector="addButtonAction:" destination="11b-Du-Ldj" id="BdD-bG-LAM"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VvW-kx-btx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -46,6 +52,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="rzG-ay-JfY">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" red="0.23529411759999999" green="0.62745098040000002" blue="0.94117647059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
